--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@angular/service-worker": "~10.0.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "ngx-solid": "0.0.1",
+    "rdf-namespaces": "^1.9.2",
     "rxjs": "~6.5.5",
+    "solid-auth-client": "^2.5.3",
+    "tripledoc": "^4.4.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
